# music-liked-sync

./: .gitignore  .goreleaser.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
cmd/music-liked-sync/: main.go
internal/app/: app.go
internal/cache/: cache.go  cache_test.go
internal/model/: model.go
internal/music_liked_sync/: cache.go  cache_test.go  constants.go  models.go  spotify.go  sync.go  sync_test.go  utils.go  utils_test.go  ytmusic.go
internal/spotify/: spotify.go
internal/sync/: sync.go  sync_test.go  utils.go  utils_test.go
internal/ytmusic/: ytmusic.go
src/: music_liked_sync.py
src/music_liked_sync/: __init__.py  __main__.py  _spotify_client.py  browser_auth.py  cache.py  cli.py  constants.py  models.py  pipeline.py  spotify.py  sync.py  utils.py  ytmusic.py
tests/: reproduce_issue.py  test_cache.py  test_cli.py  test_models.py  test_music_liked_sync.py  test_spotify.py  test_sync.py  test_utils.py  test_ytmusic.py
