[project]
name = "music-liked-sync"
version = "0.1.1"
description = "Bidirectional Spotify and YouTube Music liked songs sync"
requires-python = ">=3.11"
dependencies = [
  "spotipy>=2.25.0",
  "ytmusicapi>=1.11.5",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
