[project]
name = "music-liked-sync"
version = "0.1.1"
description = "Bidirectional Spotify and YouTube Music liked songs sync"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.49.0",
  "spotipy>=2.25.0",
  "ytmusicapi>=1.11.5",
]

[project.scripts]
music-liked-sync = "music_liked_sync.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
