[project]
name = "music-liked-sync"
version = "0.2.0"
description = "Bidirectional Spotify and YouTube Music liked songs sync"
requires-python = ">=3.13"
dependencies = [
  "playwright>=1.58.0",
  "ytmusicapi>=1.11.5",
]

[project.scripts]
music-liked-sync = "music_liked_sync.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
